
[project]
name = "proyecto-sam"
version = "1.0.0"
description = "Command-line tool to compute MAPQ=60 mapping statistics from SAM files"
authors = [{ name = "David Quevedo", email = "davquecol@outlook.es" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bioinformatics", "SAM", "MAPQ", "alignment", "RNA-seq"]
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.urls]
Repository = "https://github.com/davquecol/proyecto-sam"

[tool.uv]
package = false
